# AstroData

./: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  README.md
include/: ColorMap.hpp  Generator.hpp  Observation.hpp  Platform.hpp  ReadData.hpp  SynthesizedBeams.hpp
src/: ColorMap.cpp  Makefile  Observation.cpp  Platform.cpp  ReadData.cpp  SynthesizedBeams.cpp  printLOFAR.cpp  printLOFARChannels.cpp  printLOFAR_GNUplot.cpp  printLOFAR_GNUplotChannel.cpp  printLOFAR_Image.cpp  printSIGPROC.cpp
test/: ReadDataTest.cpp  SynthesizedBeamsTest.cpp  integration_steps.conf  sb_identity.conf  zapped_channels.conf
tests/: Makefile  readSIGPROC.cpp
